--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <h4>01</h4>
                 <h1 class="size-50">Know <br /> About me</h1>
                 <div class="h-50"></div>
-                <p>I'm an IT graduate pursuing a Web Developer (or any related position) where I can use my knowledge and technical skills in web designing, MS Office,an PC maintenance. </p>
+                <p>I'm an IT graduate pursuing a Web Developer (or any related position) where I can use my knowledge and technical skills in web designing, MS Office, and PC maintenance. </p>
                 <p>I can also do video edit, photo edit, and any other niche.</p>
                 <div class="h-50"></div> <img src="img/signature (1).png" width="230" alt="" />
                 <div class="h-50"></div>
